kubernetes/clusters/home/arr-stack/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: arr-stack

spec:
  selector:
    app: radarr

  ports:
    - name: http
      protocol: TCP
      port: 7878
      targetPort: 7878

  type: ClusterIP
