kubernetes/clusters/home/arr-stack/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: arr-stack
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10g"

spec:
  ingressClassName: nginx

  rules:
    - host: radarr.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
